# preprocessor

./: .gitignore  .readthedocs.yaml  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pypi_publishing.yaml
clearbox_preprocessor/: __init__.py  preprocessor.py  utils.py
clearbox_preprocessor/transformers/: __init__.py  numerical_transformer.py
clearbox_preprocessor/utils/: categorical_transformer.py  datetime_transformer.py  extract_time_features.py  numerical_transformer.py  numerical_transformers.py
docs/source/: conf.py  doc.md  doc_1.md  doc_2.md  index.rst
docs/source/_static/: style.css
docs/source/api/: clearbox_preprocessor.preprocessor.rst  clearbox_preprocessor.rst  modules.rst
preprocessor/: preprocessor.py
preprocessor/transformers/: categorical_transformer.py
tests/: test_inverse_transform.py  test_preprocessor.py
