[tool.poetry]
name = "clearbox-preprocessor"
version = "0.1.0"
description = "A very basic implementation of a preprocessor for tabular data."
authors = ["Carmine D'Amico <carmine@clearbox.ai>"]
maintainers = ["Carmine D'Amico <carmine@clearbox.ai>"]
readme = "README.md"
repository = "https://github.com/clearbox-ai/preprocessor"
packages = [
    { include = "clearbox_preprocessor" },
]


[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.4"
pandas = "^1.4.2"
scikit-learn = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
hypothesis = "^6.47.0"
mypy = "^0.961"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
